# intel-apac-demonstrations

./: README.md
autonomousagents/: multiple_tools_in_agent.py
casestudy/: README.md  requirements.txt
casestudy/pre-processing/: pre-process.py  test-search.py
casestudy/ui/: app.py
chatbotswithhistory/: app.py
end-to-end-lc-ls-ls/: .env  .gitignore  README.md  pyproject.toml
end-to-end-lc-ls-ls/app/: server.py
end-to-end-lc-ls-ls/env/: pyvenv.cfg
end-to-end-lc-ls-ls/env/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack  jsondiff  jsonpatch  jsonpointer
interactingwithapis/: app.py  requirements.txt
multiagentsystems/: README.md  agents.py  main.py  output.md  requirements.txt  tasks.py
multiagentsystems/db/: chroma.sqlite3
qawithcsv/: README.md  app.py  requirements.txt
servicenowintegration/: .env.bak  README.md  index.py  query.py  requirements.txt  test_servicenow_kb_access.py  ui.py
timeseriesdemos/: anomalies.txt  forecasting.ipynb  requirements.txt
